--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@ body {
 }
 	/* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: rgba (0,0,0,0);
     color: white;
-    padding: 16px;
+    padding: 10px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+	  float: left;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -107,7 +108,7 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="close" data-dismiss4CAF50="modal">&times;</button>
         <h4 class="modal-title">Downloads</h4>
       </div>
       <div class="modal-body">
