--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 }
 	/* Dropdown Button */
 .dropbtn {
-    background-color: rgba (0,0,0,0);
+    background: transparent;
     color: white;
     padding: 10px;
     font-size: 16px;
@@ -70,7 +70,7 @@ body {
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
-    text-decoration: none;
+    text-decoration: none;it.scumpinatos.twrpthememanager.main
     display: block;
 }
 
@@ -93,12 +93,12 @@ body {
 	
 <div class="dropdown" id="header">
 	<button class="dropbtn" id="title">
-		<h3><em>EzMusic</em></h3>
+		<big><em>EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
-	<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal1">Downloads</button>	<br>
-	<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal2">About</button>	<br>
-	<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3">Contact</button>	
+	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads</a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal2">About</a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact</a></li>	
   </div>
 </div>
 	
