--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {
 	height:32px;
   position:fixed;
   top:0px;
+	left:0px;
 }
 #myframe {
   position:absolute;
@@ -43,11 +44,13 @@ body {
 .dropbtn {
     background: transparent;
     color: white;
-    padding: 10px;
+	  border: 1px solid white;
+    padding: 7px;
     font-size: 16px;
-    border: none;
     cursor: pointer;
-	  float: left;
+	  position: absolute;
+	  top: 0px;
+	  left: 7px; 
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -61,7 +64,7 @@ body {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 140px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -69,8 +72,8 @@ body {
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;it.scumpinatos.twrpthememanager.main
+    padding: 6px 8px;
+    text-decoration: none;
     display: block;
 }
 
@@ -93,12 +96,12 @@ body {
 	
 <div class="dropdown" id="header">
 	<button class="dropbtn" id="title">
-		<big><em>EzMusic</em></big>
+		<big>&#xf025;<em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
-	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads</a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal2">About</a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact</a></li>	
+	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads &#xf019;</a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal2">About &#xf05a;</a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact &#xf0e0;</a></li>	
   </div>
 </div>
 	
@@ -108,14 +111,13 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss4CAF50="modal">&times;</button>
-        <h4 class="modal-title">Downloads</h4>
+        <big class="modal-title">Downloads &#xf019;</big>
       </div>
       <div class="modal-body">
         <p>Soon!</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">x</button>
+        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal">&#xf00d;</button>
       </div>
     </div>
 
@@ -128,15 +130,15 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-				<big>About</big>
+				<big>About &#xf05a;</big>
       </div>
       <div class="modal-body">
-        <img src="256x256.png"></img><br>
-			<p>"Learning every thing the hard way so you don't have to!"</p><br>
-				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories</a>
+        <img src="dclogo.png"></img><br>
+			<p style="color: #121212;">"Learning every thing the hard way so you don't have to!"</p><br>
+				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories &#xf09b;]</a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">x</button>
+        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal">&#xf00d;</button>
       </div>
     </div>
 
@@ -149,10 +151,10 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body">
-        <iframe src="https://friendly-chat-b2d6a.firebaseapp.com/" width="480" frame-border="0"></iframe>
+        <iframe src="https://friendly-chat-b2d6a.firebaseapp.com/" width="480" height="90%"frame-border="0"></iframe>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal">x</button>
+        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"></button>
       </div>
     </div>
 
