--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ body {
 		<big>&#xf025;<em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
-	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads &#xf019;</a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal2">About &#xf05a;</a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact &#xf0e0;</a></li>	
+	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></li>	
   </div>
 </div>
 	
@@ -111,13 +111,13 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <big class="modal-title">Downloads &#xf019;</big>
+        <big class="modal-title">Downloads <i class="fa fa-download" aria-hidden="true"></i></big>
       </div>
       <div class="modal-body">
         <p>Soon!</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal">&#xf00d;</button>
+        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -130,15 +130,15 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-				<big>About &#xf05a;</big>
+				<big>About <i class="fa fa-user-circle" aria-hidden="true"></i></big>
       </div>
       <div class="modal-body">
         <img src="dclogo.png"></img><br>
 			<p style="color: #121212;">"Learning every thing the hard way so you don't have to!"</p><br>
-				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories &#xf09b;]</a>
+				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-code-fork" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal">&#xf00d;</button>
+        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -154,7 +154,7 @@ body {
         <iframe src="https://friendly-chat-b2d6a.firebaseapp.com/" width="480" height="90%"frame-border="0"></iframe>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"></button>
+        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
