--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ body {
     background: transparent;
     color: white;
 	  border: 1px solid white;
+	  border-radius: 6px;
     padding: 7px;
     font-size: 16px;
     cursor: pointer;
@@ -96,7 +97,7 @@ body {
 	
 <div class="dropdown" id="header">
 	<button class="dropbtn" id="title">
-		<big>&#xf025;<em> EzMusic</em></big>
+		<big><i class="fa fa-download" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
 	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></li>
