--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ body {
 	
 <div class="dropdown" id="header">
 	<button class="dropbtn" id="title">
-		<big><i class="fa fa-download" aria-hidden="true"></i><em> EzMusic</em></big>
+		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
 	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info" aria-hidden="true"></i></a></li>
 	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></li>	
   </div>
 </div>
@@ -115,10 +115,10 @@ body {
         <big class="modal-title">Downloads <i class="fa fa-download" aria-hidden="true"></i></big>
       </div>
       <div class="modal-body">
-        <p>Soon!</p>
+        <p style="color: #121212">Soon!</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -139,7 +139,7 @@ body {
 				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-code-fork" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -148,14 +148,14 @@ body {
 	
 <!-- Modal3 -->
 <div id="myModal3" class="modal fade" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog" style="height:90%;">
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body">
-        <iframe src="https://friendly-chat-b2d6a.firebaseapp.com/" width="480" height="90%"frame-border="0"></iframe>
+        <iframe src="https://friendly-chat-b2d6a.firebaseapp.com/" width="480" height="100%"frame-border="0"></iframe>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xs" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
