--- a/index.html
+++ b/index.html
@@ -44,14 +44,12 @@ body {
 .dropbtn {
     background: transparent;
     color: white;
-	  border: 1px solid white;
-	  border-radius: 6px;
     padding: 7px;
     font-size: 16px;
     cursor: pointer;
 	  position: absolute;
 	  top: 0px;
-	  left: 7px; 
+	  left: 4px; 
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -64,6 +62,7 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
+	  border-radius: 6px;
     background-color: #f9f9f9;
     min-width: 140px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -79,7 +78,7 @@ body {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color: #121212; color: #ffffff;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -101,7 +100,7 @@ body {
 	</button>
   <div class="dropdown-content">
 	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info" aria-hidden="true"></i></a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
 	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></li>	
   </div>
 </div>
@@ -114,11 +113,20 @@ body {
       <div class="modal-header">
         <big class="modal-title">Downloads <i class="fa fa-download" aria-hidden="true"></i></big>
       </div>
-      <div class="modal-body">
-        <p style="color: #121212">Soon!</p>
-      </div>
+    <div class="modal-body">
+      <b>Android</b>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">Google Play Store <i style="float: right;" class="fa fa-android"></i></a><p/>
+      <b>Windows</b>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i style="float: right;" class="fa fa-windows"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i style="float: right;" class="fa fa-windows"></i></a><p/>
+      <b>Linux</b>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i style="float: right;" class="fa fa-linux"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i style="float: right;" class="fa fa-linux"></i></a><p/>
+      <b>OSX</b>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">For Mavericks+<span style="float: right;" class="fa fa-apple"></span></a><p/>
+    </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -131,15 +139,15 @@ body {
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-				<big>About <i class="fa fa-user-circle" aria-hidden="true"></i></big>
+				<big>About <i class="fa fa-info-circle" aria-hidden="true"></i></big>
       </div>
       <div class="modal-body">
         <img src="dclogo.png"></img><br>
 			<p style="color: #121212;">"Learning every thing the hard way so you don't have to!"</p><br>
-				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-code-fork" aria-hidden="true"></i></a>
+				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -148,14 +156,21 @@ body {
 	
 <!-- Modal3 -->
 <div id="myModal3" class="modal fade" role="dialog">
-  <div class="modal-dialog" style="height:90%;">
+  <div class="modal-dialog">
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-body">
-        <iframe src="https://friendly-chat-b2d6a.firebaseapp.com/" width="480" height="100%"frame-border="0"></iframe>
+      <div class="modal-header">
+				<big>Contact <i class="fa fa-edit" aria-hidden="true"></i></big>
+      </div>
+      <div class="modal-body" style="width: 220px;">
+        <b><a href="tel:+16197864687" target="_top"> Call <i class="fa fa-phone"></i></a></b><br></br>
+        <b><a href="sms:+16197864687" target="_top"> Text <i class="fa fa-send"></i></a></b><br></br>
+        <b><a href="mailto:duncecapsoftware@gmail.com?Subject=About%20EzMusic" target="_top"> Email <i class="fa fa-envelope"></i></a></b><br>
+        <p>  or...</p>
+        <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b><br></br>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
