--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {
 .dropbtn {
     background: transparent;
     color: white;
+	  border: 0px;
     padding: 7px;
     font-size: 16px;
     cursor: pointer;
@@ -107,13 +108,10 @@ body {
 	
 <!-- Modal1 -->
 <div id="myModal1" class="modal fade" role="dialog">
-  <div class="modal-dialog">info
+  <div class="modal-dialog">Downloads <i class="fa fa-download" aria-hidden="true"></i>
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-header">
-        <big class="modal-title">Downloads <i class="fa fa-download" aria-hidden="true"></i></big>
-      </div>
-    <div class="modal-body">
+    <div class="modal-body" style="color: #121212;">
       <b>Android</b>
       <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">Google Play Store <i style="float: right;" class="fa fa-android"></i></a><p/>
       <b>Windows</b>
@@ -135,15 +133,12 @@ body {
 	
 <!-- Modal2 -->
 <div id="myModal2" class="modal fade" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog">About <i class="fa fa-info-circle" aria-hidden="true"></i>
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-header">
-				<big>About <i class="fa fa-info-circle" aria-hidden="true"></i></big>
-      </div>
-      <div class="modal-body">
+      <div class="modal-body" style="color: #121212;">
         <img src="dclogo.png"></img><br>
-			<p style="color: #121212;">"Learning every thing the hard way so you don't have to!"</p><br>
+			<p style="color: #121212;">"Learning every thing the hard way<br> so you don't have to!"</p><br>
 				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
@@ -156,13 +151,10 @@ body {
 	
 <!-- Modal3 -->
 <div id="myModal3" class="modal fade" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog">About <i class="fa fa-info-circle" aria-hidden="true"></i>
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-header">
-				<big>Contact <i class="fa fa-edit" aria-hidden="true"></i></big>
-      </div>
-      <div class="modal-body" style="width: 220px;">
+      <div class="modal-body" style="color: #121212;">
         <b><a href="tel:+16197864687" target="_top"> Call <i class="fa fa-phone"></i></a></b><br></br>
         <b><a href="sms:+16197864687" target="_top"> Text <i class="fa fa-send"></i></a></b><br></br>
         <b><a href="mailto:duncecapsoftware@gmail.com?Subject=About%20EzMusic" target="_top"> Email <i class="fa fa-envelope"></i></a></b><br>
