--- a/index.html
+++ b/index.html
@@ -108,23 +108,23 @@ body {
 	
 <!-- Modal1 -->
 <div id="myModal1" class="modal fade" role="dialog">
-  <div class="modal-dialog">Downloads <i class="fa fa-download" aria-hidden="true"></i>
+  <div class="modal-dialog modal-sm">Downloads <i class="fa fa-download" aria-hidden="true"></i>
     <!-- Modal content-->
     <div class="modal-content">
     <div class="modal-body" style="color: #121212;">
       <b>Android</b>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">Google Play Store <i style="float: right;" class="fa fa-android"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">Google Play Store <i class="fa fa-android"></i></a><p/>
       <b>Windows</b>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i style="float: right;" class="fa fa-windows"></i></a><p/>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i style="float: right;" class="fa fa-windows"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i class="fa fa-windows"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i class="fa fa-windows"></i></a><p/>
       <b>Linux</b>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i style="float: right;" class="fa fa-linux"></i></a><p/>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i style="float: right;" class="fa fa-linux"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i class="fa fa-linux"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i class="fa fa-linux"></i></a><p/>
       <b>OSX</b>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">For Mavericks+<span style="float: right;" class="fa fa-apple"></span></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">For Mavericks+<i class="fa fa-apple"></i></a><p/>
     </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-lg" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -142,7 +142,7 @@ body {
 				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-lg" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
@@ -151,7 +151,7 @@ body {
 	
 <!-- Modal3 -->
 <div id="myModal3" class="modal fade" role="dialog">
-  <div class="modal-dialog">About <i class="fa fa-info-circle" aria-hidden="true"></i>
+  <div class="modal-dialog modal-sm">Contact <i class="fa fa-edit" aria-hidden="true"></i>
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body" style="color: #121212;">
@@ -162,7 +162,7 @@ body {
         <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b><br></br>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-lg" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
 
