--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ body {
 		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
-	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
-	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></li>	
+	<p><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></p>
+	<p><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></p>
+	<p><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></p>	
   </div>
 </div>
 	
@@ -121,7 +121,7 @@ body {
       <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">32 Bit Systems <i class="fa fa-linux"></i></a><p/>
       <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">64 Bit Systems <i class="fa fa-linux"></i></a><p/>
       <b>OSX</b>
-      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">For Mavericks+<i class="fa fa-apple"></i></a><p/>
+      <p><a style="width: 220px;margin-left: 10px; margin-right: 10px;" href="#">For Mavericks+ <i class="fa fa-apple"></i></a><p/>
     </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger btn-lg" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
@@ -157,9 +157,9 @@ body {
       <div class="modal-body" style="color: #121212;">
         <b><a href="tel:+16197864687" target="_top"> Call <i class="fa fa-phone"></i></a></b><br></br>
         <b><a href="sms:+16197864687" target="_top"> Text <i class="fa fa-send"></i></a></b><br></br>
-        <b><a href="mailto:duncecapsoftware@gmail.com?Subject=About%20EzMusic" target="_top"> Email <i class="fa fa-envelope"></i></a></b><br>
+        <b><a href="mailto:duncecapsoftware@gmail.com?Subject=About%20EzMusic" target="_top"> Email <i class="fa fa-envelope"></i></a></b>
         <p>  or...</p>
-        <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b><br></br>
+        <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger btn-lg" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
