--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./public/bootstrap.min.css">
+  <script src=./public/jquery.min.js"></script>
+  <script src=./public/bootstrap.min.js"></script>
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
 <style type="text/css">
