--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="./public/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
+	<link rel="stylesheet" href="./public/bootstrap.min.css">
   <script src=./public/bootstrap.min.js"></script>
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
@@ -188,6 +188,9 @@ $(document).ready(function(){
 });
 </script>
 	
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+
+  <script src=./public/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
