--- a/app/index.html
+++ b/app/index.html
@@ -14,15 +14,15 @@
       <div id="inner-content">
         <webview src="https://lifeluvr.github.io/ezmusic"></webview>
         <div id="drag" name="drag">
-          <div class="dropdown" id="header">
-          	<button class="dropbtn" id="title">
+          <div class="dropdown" id="header"">
+    <button id="title" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
 		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
-  <div class="dropdown-content">
-	<p><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></p>
-	<p><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></p>
-	<p><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></p>	
-     </div>
+  <ul class="dropdown-menu">
+	<li><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
+	<li><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></li>	
+     </ul>
    </div>
    
   </div>
