--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 		<style>
 		/* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: rgba(0,0,0,0);
     color: white;
     padding: 16px;
     font-size: 16px;
