--- a/app/index.html
+++ b/app/index.html
@@ -1,61 +1,14 @@
 <html>
 	<head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>EzMusic App</title>
 		<script src="../public/jquery.min.js"></script>
 		<script src="../public/bootstrap.min.js"></script>
 		<script src="../public/frameless_window.js"></script>
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-			<link rel="stylesheet" type="text/css" href="../public/bootstrap.min.css" />
-			<link rel="stylesheet" type="text/css" href="../public/style.css" />
-		<style>
-		/* Dropdown Button */
-.dropbtn {
-    background-color: rgba(0,0,0,0);
-    color:#fff;
-    padding: 16px;
-	  font-family: "Comic Sans MS";
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color:#000;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    border: 1px solid #fff;
-}
-		</style>
+		<link rel="stylesheet" href="../public/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="../public/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="../public/style.css" />
 		</head>
 		<body>
 			<div id="content">
