--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
 		<script src="../public/jquery.min.js"></script>
 		<script src="../public/bootstrap.min.js"></script>
 		<script src="../public/frameless_window.js"></script>
-		<link rel="stylesheet" href="../public/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="../public/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="../public/style.css" />
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		 <link rel="stylesheet" type="text/css" href="../public/bootstrap.min.css" />
+		 <link rel="stylesheet" type="text/css" href="../public/style.css" />
 		</head>
 		<body>
 			<div id="content">
