--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 		<script src="../public/jquery.min.js"></script>
 		<script src="../public/bootstrap.min.js"></script>
 		<script src="../public/frameless_window.js"></script>
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		
 		 <link rel="stylesheet" type="text/css" href="../public/bootstrap.min.css" />
 		 <link rel="stylesheet" type="text/css" href="../public/style.css" />
 		</head>
@@ -17,11 +17,11 @@
 					<div id="drag" name="drag"></div>
 					
 <div class="dropdown">
-  <button class="dropbtn"><big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big></button>
+  <button class="dropbtn"><big><i class="glyphicon glyphicon-headphones" aria-hidden="true"></i><em> EzMusic</em></big></button>
   <div class="dropdown-content">
-		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download"></i></a>
-		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle"></i></a>
-    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-info-edit"></i></a>
+		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="glyphicon glyphicon-download"></i></a>
+		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal2">About <i class="glyphicon glyphicon-info-circle"></i></a>
+    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="glyphicon glyphicon-info-edit"></i></a>
   </div>
 </div>
 				
