who cares?... really!
Do you?

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ div#main {
 </head>
 
 <body>
-	<!--div id="main"><iframe id="bgFrame" src="./background.html"></iframe></div-->
+	<div id="main"><webview id="bgFrame" src="./background.html"></webview></div>
   <div id="app"></div>
 
 	<script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
