--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <!--link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet"-->
   <link href="ezstyle.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
 <style type="text/css">
@@ -42,7 +41,7 @@ div#main {
 </head>
 
 <body>
-	<div id="main"><webview id="bgFrame" src="./background.html"></webview></div>
+	<div id="main"><iframe id="bgFrame" src="./background.html"></iframe></div>
   <div id="app"></div>
 
 	<script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
