--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@ div#main {
 #app {
 	position:fixed;
 	}
+#music {
+  position:absolute; bottom:12px; right:12px; background:#212121; width:54px; height:54px;		
+	}
 </style>
 </head>
 
 <body>
-	
+	<button onclick="myFunction()" id="music"><i class="glyphicon glyphicon-modal-window"></i></button>
 	<div id="main"><iframe id="bgFrame" src="./background.html"></iframe></div>
   <div id="app"></div>
 <a href="http://builder.extensionfactory.com/builder/download/?url=https%3A//lifeluvr.github.io/ezmusic" id="sf-extensionfactory-link-31798" class="sf-extensionfactory-link">get our extension</a> <script type="text/javascript">var _xfbcq = _xfbcq || []; (function() { var embed = { url: 'https://lifeluvr.github.io/ezmusic', embed_type: 'toolbar',/* */ mode: 'top',/* position : top or bottom */ lang: 'en',/* default lang */ name: 'EzMusic',/* name of the site */ install_msg: null,/* override the message inside the toolbar */ linkid: "sf-extensionfactory-link-31798" } _xfbcq.push(embed); })(); (function() { var efs = document.createElement('script'); efs.type = 'text/javascript'; efs.async = true; efs.src = 'https://cdn.extensionfactory.com/embed/builder.js' var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(efs, s); })(); </script>
